# jobful

./: .gitignore  Cargo.toml  default.nix  flake.nix  groups.json  module.nix  readme.md  shell.nix
src/: bot.rs  config.rs  error.rs  lib.rs  main.rs
src/functions/: about.rs  contact.rs  help.rs  inline.rs  mod.rs  publish.rs  start.rs
src/hooks/: is_mod.rs  is_private.rs  is_reply.rs  mod.rs
src/utils/: inlines.rs  mod.rs
src/utils/resources/: builder.rs  mod.rs  prelude.rs
