[package]
name = "jobful"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://t.me/uzinfojobful_bot"
repository = "https://github.com/uzinfocom-org/jobful"
description = "A telegram bot to make jobless jobful from Uzinfocom"
authors = ["Sokhibjon Orzikulov <sakhib@orzklv.uz>"]

# Dependencies that will included with final binary
[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
orzklv = { version = "0.1.9", features = ["full"] }
owo-colors = { version = "4", features = ["supports-colors"] }
pretty_env_logger = "0.5"
reqwest = { version = "0.12", features = ["json"] }
rust-fuzzy-search = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.15", features = [
  "macros",
  "webhooks",
  "webhooks-axum",
] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

# Development dependencies which aren't used in release binary
[dev-dependencies]

# Optimize release binary as much as possible
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
